lib/src/compiler/tests/testdata/errors/85.out
error[E001]: syntax error
 --> line:3:16
  |
3 |   $a = { 01 02 0 }
  |                ^ expecting `[`, BYTE, `(` or `}`, found `0`
  |